merge master changes and refactor subscription entity changes